Fixes spacing with nav items and buttons

--- a/src/components/CTA/CTA.scss
+++ b/src/components/CTA/CTA.scss
@@ -45,6 +45,7 @@
     &__text {
         color: $primary-global;
         margin: 0;
+        text-transform: uppercase;
 
         &--special {
             color: $primary-button;
